--- a/제로초 인강/1-5강.html
+++ b/제로초 인강/1-5강.html
@@ -22,9 +22,10 @@
         <button>검색</button>
         <!-- <textarea name="" id="" cols="30" rows="10"></textarea> -->
     </fieldset>
-    <h2>실시간 검색어</h3>
+    <h2>실시간 검색어</h2>
+    <h3>연합뉴스</h3>
     <h3>로그인</h3>
-    <h3>뉴스</h5>
+    <h3>뉴스</h3>
     <h3>법률</h3>
     <h3>쇼핑</h3>
 </body>
