--- a/제로초 인강/2강.html
+++ b/제로초 인강/2강.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>네이버</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1">
+    <link rel="stylesheet" href="naver.css">
 </head>
 <body>
     <header>
-    <h1>
-        <a href="https://www.naver.com"> 네이버</a> 
-        <!--주석(comment)입니다-->
-    </h1>
-    <h2>검색창</h2>
-    <fieldset>
-        <legend>검색</legend> <!--범례-->
-        <input/>
-        <button>검색</button>
-    </fieldset>
+        <div id="header-center"style="margin: 0 auto; width: 1080px"> <!--가운데 정렬용 div-->
+        <!-- 속성명: 속성값; 속성명2 : 속성값2-->
+            <h1>
+                <a href="https://www.naver.com"> 네이버</a> 
+                <!--주석(comment)입니다-->
+            </h1>
+            <h2>검색창</h2>
+            <fieldset>
+                <legend>검색</legend> <!--범례-->
+                <input/>
+                <button>검색</button>
+            </fieldset>
+        </div>
     </header>
+    
     <nav>
         </ul>
             <li>메일</li>
