--- a/제로초 인강/2강.html
+++ b/제로초 인강/2강.html
@@ -12,16 +12,23 @@
     <header>
         <div id="header-center"style="margin: 0 auto; width: 1080px"> <!--가운데 정렬용 div-->
         <!-- 속성명: 속성값; 속성명2 : 속성값2-->
-            <h1>
-                <a href="https://www.naver.com"> 네이버</a> 
-                <!--주석(comment)입니다-->
-            </h1>
-            <h2>검색창</h2>
-            <fieldset>
-                <legend>검색</legend> <!--범례-->
-                <input/>
-                <button>검색</button>
-            </fieldset>
+            <div>
+                <div style="display: inline-block;">네이버를 시작페이지로</div>
+                <div style="display: inline-block;">쥬니어네이버</div>
+                <div style="display: inline-block;">해피빈</div>
+            </div>
+            <div id="header-search">
+                <h1>
+                    <a href="https://www.naver.com"> 네이버</a> 
+                    <!--주석(comment)입니다-->
+                </h1>
+                <h2>검색창</h2>
+                <fieldset>
+                    <legend>검색</legend> <!--범례-->
+                    <input/>
+                    <button>검색</button>
+                </fieldset>
+            </div>
         </div>
     </header>
     
