--- a/제로초 인강/3-1강.html
+++ b/제로초 인강/3-1강.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>네이버</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1">
-    <link rel="stylesheet" href="naver.css">
+    <link rel="stylesheet" href="3-1강.css">
 </head>
 <body>
     <header>
         <div id="header-center"style="margin: 0 auto; width: 1080px"> <!--가운데 정렬용 div-->
-        <!-- 속성명: 속성값; 속성명2 : 속성값2-->
+            <!-- 속성명: 속성값; 속성명2 : 속성값2-->
             <div>
                 <div style="display: inline-block;">네이버를 시작페이지로</div>
                 <div style="display: inline-block;">쥬니어네이버</div>
@@ -22,16 +22,15 @@
                     <a href="https://www.naver.com"> 네이버</a> 
                     <!--주석(comment)입니다-->
                 </h1>
-                <h2>검색창</h2>
+                <h2 class="blind">검색창</h2>
                 <fieldset>
-                    <legend>검색</legend> <!--범례-->
+                    <legend class="blind">검색</legend> <!--범례-->
                     <input/>
-                    <button>검색</button>
+                    <button class="blind">검색</button>
                 </fieldset>
+                </div>
             </div>
-        </div>
     </header>
-    
     <nav>
         </ul>
             <li>메일</li>
