--- a/제로초 인강/7-4강.html
+++ b/제로초 인강/7-4강.html
@@ -138,6 +138,7 @@
                 <div id="main-ad"></div>
                 <div id="main-login">
                     <h3>로그인</h3>
+                    </div>
                 </div>
             </div>
         <div id="main-second-block">
