반응형 수정중

--- a/Bootstrap 과제/index.html
+++ b/Bootstrap 과제/index.html
@@ -120,7 +120,7 @@
     <div class="bg-secondary text-white" id="contact">
         <H3 id="title4">Get in Touch</H3>
         <hr style="color: black; margin-left: 15rem; margin-right: 15rem;">
-        <div class="bg-secondary text-white d-flex flex-column">
+        <div class="bg-secondary text-white d-flex flex-column justify-content-center align-items-center">
             <div class="bg-secondary text-white d-flex justify-content-center">
                 <div class="input-group mb-3 inputs">
                     <input type="text" class="form-control" placeholder="name" aria-label="Username" >
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="input-group mb-3" id="message-container">
-                <input type="text" class="form-control" placeholder="your message here" aria-label="Username" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" placeholder="your message here" aria-label="Username" aria-describedby="basic-addon1" id>
             </div>
             <div id="btn4">
                 <button type="button" class="btn btn-primary" id="send-btn">
