start 버튼 수정중

--- a/Javascript 스톱워치 과제/index.html
+++ b/Javascript 스톱워치 과제/index.html
@@ -17,7 +17,9 @@
     <h3 class="mt-5 py-5 head">피로그래밍 스톱워치</h3>
     <div id="container-watch">
       <!-- time -->
-      <div class="mt-5 py-3 time bg-white">01:00</div>
+      <div class="mt-5 py-3 time bg-white">
+        <span id="seconds">01</span>:<span id="miliseconds">01</span>
+      </div>
 
       <!-- buttons -->
       <div class="mb-5 pb-3 container-btn">
