--- a/Javascript 스톱워치 과제/index.html
+++ b/Javascript 스톱워치 과제/index.html
@@ -17,9 +17,7 @@
     <h3 class="mt-5 py-5 head">피로그래밍 스톱워치</h3>
     <div id="container-watch">
       <!-- time -->
-      <div class="mt-5 py-3 time bg-white">
-        <span id="seconds">01</span>:<span id="miliseconds">01</span>
-      </div>
+      <div class="mt-5 py-3 time bg-white">11:11</div>
 
       <!-- buttons -->
       <div class="mb-5 pb-3 container-btn">
@@ -31,12 +29,14 @@
     </div>
     <!-- record -->
     <div class="mt-4 pt-2 record">
+      <input type="checkbox" id="check-all" />
       구간기록
-      <a href="" style="color: black" class="me-2 clear"
+      <button class="clear"><i class="fa-solid fa-trash"></i></button>
+      <!-- <a href="" style="color: black" class="me-2 clear"
         ><i class="fa-solid fa-trash"></i
-      ></a>
-      <ul></ul>
+      ></a> -->
     </div>
+    <ul id="record-list"></ul>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
